# demo-project

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
app/: DemoProject.m.cpp
src/: CMakeLists.txt  Math.cpp  Math.h
test/: HelloWorld.t.cpp
tests/: Math.t.cpp
